# PriceSim

./: .gitignore  FOUNDRY_PRICING_CODEX_GIGACHAD.md  README.md  pyproject.toml
configs/: default.yml  high_utilization.yml  low_utilization.yml
data/sample/: backlog.csv  lines.csv  scenarios.yml
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Collapsible.tsx  Controls.tsx  DistributionsPanel.tsx  ExplanationPanel.tsx  HistogramChart.tsx  InfoSections.tsx  MetricCards.tsx  ScenarioTable.tsx
frontend/lib/: api.ts  format.ts  types.ts
scripts/: bootstrap.sh  export_report.sh  run_demo.sh
src/foundry_pricing/: __init__.py  __main__.py  cli.py  config.py  constants.py  distributions.py  logging_config.py  models.py  plotting.py  pricing.py  reporting.py  scheduling.py  simulation.py
src/foundry_pricing/api/: __init__.py  app.py  schemas.py  services.py
tasks/: ORCHESTRATION.md  TASK-01-cli-reporting.md  TASK-02-backend-api.md  TASK-03-frontend.md  TASK-04-docker-infra.md  TASK-05-docs-ci.md  TASK-06-testing-qa.md
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_distributions.py  test_golden_values.py  test_models.py  test_pricing.py  test_properties.py  test_scheduling.py  test_simulation.py
tests/integration/: __init__.py  test_api_flow.py  test_pipeline.py
