[project]
name = "foundry-pricing"
version = "0.1.0"
description = "Monte Carlo + capacity-scheduling pricing simulator for a foundry-style business"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Foundry Pricing Team" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "pyarrow>=15.0",
    # --- API layer (used by the FastAPI backend task) ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
foundry-pricing = "foundry_pricing.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "pandas-stubs>=2.1",
    "types-PyYAML>=6.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry_pricing"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["plotly.*", "matplotlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["foundry_pricing"]
